# surface-roughness

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  apparent_dip_normality_test.ipynb  compare_roughness_methods.py  example_verification.ipynb  generate_roughness_maps.py  pyproject.toml  requirements.txt  setup.py  test_roughness_maps.ipynb  test_roughness_maps.py
.circleci/: config.yml
.github/workflows/: wheels.yml
prebuild/: prebuild_windows.ps1
scripts/: analyze_hhcorr.ipynb  apparent_dip_normality_test.ipynb  compare_roughness_methods.py  create_pickled_maps.py  example_verification.ipynb  example_verification.py  find_min_window.ipynb  generate_fracture_traces.py  generate_roughness_maps.py  generate_roughness_maps_linux.py  generate_streamline.py  histogram_from_vtk.py  scale_testing.py  split_surface_edges.ipynb  surface_paraview.ipynb  surface_paraview_array.py  test_optimization.py  test_roughness_maps.ipynb  test_roughness_maps.py  visualize_geometry_utils.ipynb  visualize_roughness_distribution.ipynb  visualize_roughness_distribution.py
surface_roughness/: __init__.py  _geometry_utils.py  _profile.py  _roughness_cppimpl.cpp  _sampling_utils.py  roughness.py  roughness_impl.py  sampling.py
surface_roughness/_roughness_cpp/: Directional.cpp  Directional.h  DirectionalRoughness.cpp  DirectionalRoughness.h  DirectionalUtil.h  MeanApparentDip.cpp  MeanApparentDip.h  TINBasedRoughness.cpp  TINBasedRoughness.h  TINBasedRoughness_againstshear.cpp  TINBasedRoughness_againstshear.h  TINBasedRoughness_bestfit.cpp  TINBasedRoughness_bestfit.h
surface_roughness/_roughness_cpp/include/: DIrectional.h  DirectionalRoughness.h  DirectionalUtil.h  MeanApparentDip.h  TINBasedRoughness.h  TINBasedRoughness_againstshear.h  TINBasedRoughness_bestfit.h
surface_roughness/_roughness_pyimpl/: _DirectionalRoughness.py  _TINBasedRoughness.py  __init__.py
tests/: example_surface.stl  test_geometry_utils.py  test_pybind11_interface.py
